--- a/Site/public/dash-estatica/nav.css
+++ b/Site/public/dash-estatica/nav.css
@@ -202,7 +202,7 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
     flex-wrap: wrap;
     justify-content: center;
     width: 100%;
-    margin-top: 30px;
+    margin-bottom: 50px;
 }
 
 .perigo-frio {
@@ -233,22 +233,21 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
     padding-top: 15px;
 }
 
-.grafico{
+.grafico {
     display: flex;
     align-items: center;
     flex-direction: column;
     background-color: white;
-    width: 80%;
-    height: 50%;
-    margin-top:20px;
-    margin-left: 40px;
-    margin-bottom: 150px;
+    width: 50%;
+    height: 100%;
+    /* margin-top: 20px; */
+    /* margin-left: 40px; */
+    /* margin-bottom: 150px; */
     margin-right: 40px;
     border-radius: 10px;
     align-items: center;
-    padding-top: 10px;
-    padding-bottom: 10px;
-
+    /* padding-top: 10px; */
+    /* padding-bottom: 10px; */
 }
 
 .grafico h1{
@@ -459,4 +458,91 @@ li a {
 
 .hello h3 span {
     font-weight: 800;
+}
+
+.div_maquinas {
+    width: 100%;
+    height: 22vh;
+    background-color: yellow;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.div_maquina1 {
+    width: 7%;
+    height: 6vh;
+    background-color: gray;
+    border-radius: 34px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.div_maquina2 {
+    width: 7%;
+    height: 6vh;
+    background-color: gray;
+    border-radius: 34px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.div_maquina3 {
+    width: 7%;
+    height: 6vh;
+    background-color: gray;
+    border-radius: 34px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.div_maquina4 {
+    width: 7%;
+    height: 6vh;
+    background-color: gray;
+    border-radius: 34px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.div_maquina5 {
+    width: 7%;
+    height: 6vh;
+    background-color: gray;
+    border-radius: 34px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.inf_dash {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+}
+
+
+
+.div_selectBox {
+    background-color: yellow;
+    width: 16%;
+    height: 6%;
+}
+
+.sel_componentescss {
+    margin-bottom: 22%;
+}
+
+.div_componente {
+    background-color: yellow;
+    width: 23%;
+    height: 69%;
+    margin-left: -118px;
+    margin-bottom: 116px;
 }
