--- a/Site/public/dash-estatica/cad-maquina.css
+++ b/Site/public/dash-estatica/cad-maquina.css
@@ -18,7 +18,7 @@
   form{
       height: 55%;
       width: 60%; 
-      background-color: rgba(255,255,255,0.13);
+      background-color: #ebf5fc;
       position: relative;
       transform: translate(-50%,-0%);
       /* top: 54%; */
@@ -35,7 +35,7 @@
   }
   form *{
       font-family: 'Poppins',sans-serif;
-      color: #34aedf;
+      color: #000;
       letter-spacing: 0.5px;
       outline: none;
       border: none;
@@ -62,22 +62,25 @@
   }
   
   label{
+      
     flex-wrap: wrap;
       display: block;
       margin-top: 30px;
       font-size: 16px;
       font-weight: 500;
+      
   }
   input{
       display: block;
       height: 50px;
       width: 90%;
-      background-color: rgba(255,255,255,0.07);
+      background-color: rgba(0,0,0,.25);
       border-radius: 3px;
       padding: 0 10px;
       margin-top: 8px;
       font-size: 14px;
       font-weight: 300;
+      
   }
   ::placeholder{
       color: #ffffff;
@@ -124,7 +127,7 @@
     box-sizing: border-box;
     cursor: pointer;
     transition: all 400ms ease;
-    background-color: #34aedf;
+    background-color: #3A3845;
     width: 50%;
   }
   
