--- a/Site/public/dash-estatica/cad-maquina.css
+++ b/Site/public/dash-estatica/cad-maquina.css
@@ -399,3 +399,14 @@ form .div_botao{
   }
 }
 
+.loading-div {
+  width: 50px;
+  /* border: 3px solid pink; */
+  margin: auto;
+  display: none;
+}
+
+.loading-div img {
+  height: 50px;
+  width: 50px;
+}
