--- a/JAR-inicial/src/main/java/com/mycompany/swing/KeepSwimming.form
+++ b/JAR-inicial/src/main/java/com/mycompany/swing/KeepSwimming.form
@@ -56,26 +56,17 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
+              <Group type="102" alignment="1" attributes="0">
                   <EmptySpace pref="28" max="32767" attributes="0"/>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="1" attributes="0">
-                          <Group type="103" groupAlignment="0" attributes="0">
-                              <Component id="TextoEmail" min="-2" max="-2" attributes="0"/>
-                              <Component id="TextoSenha" min="-2" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="btnNavegar" min="-2" pref="409" max="-2" attributes="0"/>
-                                  <Component id="CampoSenha" min="-2" pref="409" max="-2" attributes="0"/>
-                                  <Component id="CampoEmail" min="-2" pref="409" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="102" alignment="1" attributes="0">
-                          <Component id="Resultado" min="-2" pref="179" max="-2" attributes="0"/>
-                          <EmptySpace min="-2" pref="84" max="-2" attributes="0"/>
-                      </Group>
+                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                      <Component id="TextoEmail" min="-2" max="-2" attributes="0"/>
+                      <Component id="TextoSenha" min="-2" max="-2" attributes="0"/>
+                      <Component id="btnNavegar" alignment="0" pref="409" max="32767" attributes="0"/>
+                      <Component id="CampoSenha" alignment="0" pref="409" max="32767" attributes="0"/>
+                      <Component id="CampoEmail" alignment="0" pref="409" max="32767" attributes="0"/>
+                      <Component id="Resultado" alignment="0" max="32767" attributes="0"/>
                   </Group>
+                  <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -90,11 +81,11 @@
                   <Component id="TextoSenha" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="CampoSenha" min="-2" pref="45" max="-2" attributes="0"/>
-                  <EmptySpace type="separate" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
                   <Component id="Resultado" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="55" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
                   <Component id="btnNavegar" min="-2" pref="60" max="-2" attributes="0"/>
-                  <EmptySpace pref="87" max="32767" attributes="0"/>
+                  <EmptySpace pref="105" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -167,7 +158,6 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="resultado"/>
           </Properties>
         </Component>
       </SubComponents>
