--- a/Site/public/dash-estatica/dashboards.css
+++ b/Site/public/dash-estatica/dashboards.css
@@ -1,4 +1,4 @@
-/* pagina mural */
+pagina mural
 
 *, body {
     font-family: 'Poppins', sans-serif;
@@ -6,7 +6,6 @@
 
 .dash-right .avisos {
     width: 100%;
-    /* border: 3px solid pink; */
     color: rgb(216, 216, 216);
     font-family: 'Poppins', sans-serif;
 }
@@ -36,7 +35,6 @@
 
 .dash-right .avisos .div-form textarea {
     width: 100%;
-    /* color: #E6005A; */
     border: 3px solid #5b9e41;
     background-color: white;
     border-radius: 5px;
@@ -89,7 +87,6 @@
 
 .div-results .feed-container {
     background: linear-gradient(#ffffff23, rgba(0, 0, 0, 0.933));
-    /* background-color: #0000001c; */
     border-radius: 5px;
     margin-bottom: 80px;
 }
@@ -116,12 +113,7 @@
     left: 25%;
     background-color: #161618;
 
-    /* width: 75%;
-    display: flex;
-    background-color: #161618;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;*/
+    
     height: 100vh; 
 }
 
@@ -210,7 +202,6 @@
     height: 30%;
     border-radius: 50px;
     margin-top: 6%;
-    /* background-color: #c7c7c7; */
 }
 
 .btns-dash{
