--- a/Site/public/dash-estatica/teste.css
+++ b/Site/public/dash-estatica/teste.css
@@ -17,7 +17,7 @@
     height: 93.1vh;
     margin-top: auto;
     background:#17203E ;
-    width: 78%;
+    width: 100%;
     padding: 2rem
 }
 :root {
@@ -405,8 +405,8 @@ body.shrink .tooltip {
 
 .retangulo2{
     background: #222D5A;
-    width: 70%;
-    height: 40vh;
+    width: 100%;
+    height: 30vh;
     margin: 1rem;
     border-radius: 10px;
     display: flex;
@@ -428,7 +428,7 @@ body.shrink .tooltip {
 .miniInfo{
     margin: auto;
     width:45%;
-    height: 45%;
+    height: 65%;
     background-color: #3a0f57;
     border-radius: 5%;
 }
@@ -497,6 +497,7 @@ li a {
     font-weight: 800;
 }
 .centralizar{
+  height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -507,9 +508,32 @@ li a {
     justify-content: space-around;
     align-items: center;
     background-color: #222D5A;
-    width: 50%;
-    height: 35vh;
+    width: 60%;
+    height: 40vh;
     margin: 10px;
     padding: 5px;
     border-radius: 10px;
   }
+.tituloGraficos{
+  justify-content: space-around;
+  /* justify-content: center; */
+  align-items: center;
+  display: flex;
+  width: 100%;
+  height: 5%;
+  border-radius: 5px;
+  /* background-color: #292092be; */
+  
+}
+.usoIde{
+  color: #fff;
+  /* background-color: #cfcde7be; */
+  border-radius: 10px;
+  width: 35%;
+}
+
+.top10{
+  overflow: scroll;
+  height: 100%;
+  width: 100%;
+}
