--- a/Site/public/css/tela-cadastro.css
+++ b/Site/public/css/tela-cadastro.css
@@ -176,7 +176,7 @@ body {
 
 
 .formulario {
-    height: 95%;
+    height: 500px;
     background-color: rgba(255, 255, 255, 0.13);
     border-radius: 10px;
     backdrop-filter: blur(10px);
@@ -303,13 +303,18 @@ form .div_botao{
         overflow-y: scroll;
     } 
 
+    .formulario{
+        height: 890px;
+    }
     .roles{
         flex-wrap: wrap; 
         display: block;
         width: 100%;
         height: 80%;
       }
-      
+      .div_botao{
+        width: 70%;
+      }
       .ladoDireito{
           width: 140%;
       }
@@ -319,29 +324,7 @@ form .div_botao{
       }
 
       .ocean{
-        height: 158vh;
+        height:93vh;
       }
-
-      .div_botao{
-          width: 100%;
-      }
-
      
-}
-
-@media screen and (max-width: 1300px){
-
-    .formulario{
-        height: 95%;
-        
-    }
-    
-}
-
-@media screen and (max-height: 700px){
-
-    .formulario{
-        height: 95%;
-    }
-    
 }
