feat- ultimas mudanças

--- a/Site/public/dash-estatica/cad-maquina.css
+++ b/Site/public/dash-estatica/cad-maquina.css
@@ -939,3 +939,19 @@ color: #000;
 }
 
 
+
+.hello {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.hello h3 {
+  color: #E3B062;
+  font-weight: 300;
+  font-size: 1.2rem;
+}
+
+.hello h3 span {
+  font-weight: 800;
+}
