--- a/Site/public/dash-estatica/cad-maquina.css
+++ b/Site/public/dash-estatica/cad-maquina.css
@@ -591,7 +591,7 @@ body.shrink .tooltip {
     margin-left: 10%;
   
     width: 85%;
-    height: 70vh;
+    height: 100vh;
     background-color: #ffffff;
   }
   .botoes_crud
@@ -612,12 +612,15 @@ body.shrink .tooltip {
   }
   .ipt_update
   {
-    text-align: center;
-    color: white;
-    
-    width: 30%;
-    height: 10%;
-    background-color: #17203E;
+    height: 50px;
+    width: 25%;
+    background-color: rgba(0,0,0,.25);
+    border-radius: 3px;
+    padding: 0 10px;
+    margin-top: 8px;
+    font-size: 14px;
+    font-weight: 300;
+    color: #000;
   
   }
   
