--- a/Site/public/dash-estatica/nav.css
+++ b/Site/public/dash-estatica/nav.css
@@ -195,23 +195,33 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
     top: 0;
     left: 25%;
     background-color: #17203E;
-    height: 90vh; 
+    height: 80vh; 
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 
 }
 .regua {
+    position: relative;
+    bottom: 10vh;
+
     display: flex;
     text-align: center;
 
     width: 100%;
-    height: 35%;
+    height: 30%;
     justify-content: space-around;
-    margin-bottom: 50px;
+   
 }
 
-
+.item-regua {
+    
+    width: 30%;
+    margin: 5px;
+    text-align: center;
+    padding-top: 15px;
+    border-radius: 2%;
+}
 
 .perigo-quente {
     background-color: #fd993b;
@@ -229,14 +239,7 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
     background-color: #FFC1D5;
 }
 
-.item-regua {
-    padding: 5px;
-    width: 30%;
-    margin: 5px;
-    text-align: center;
-    padding-top: 15px;
-    border-radius: 2%;
-}
+
 
 .grafico {
     display: flex;
@@ -509,17 +512,22 @@ li a {
 }
 
 .div_maquinas {
-    width: 100%;
+    position: relative;
+    right: 10vw;
+
+    width: 10vw;
     height: 22vh;
 
    
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+
+   
 }
 
 .div_maquina1 {
-    width: 15%;
+    width: 15vw;
     height: 6vh;
     background-color: #17203E;
     border-color: #DBC4FF;
@@ -580,6 +588,7 @@ li a {
 
 
 .inf_dash {
+    
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -595,12 +604,15 @@ li a {
 }
 
 .sel_componentescss {
+    width: 27vw;
+    height: 6vh;
+    background-color: #17203E;
+    border-color: #DBC4FF;
+    color: whitesmoke;
+    border-radius: 5px 20px 5px 20px;
+
     margin-bottom: 22%;
     padding: 5px;
-    background-color: #AFD6FF;
-    color: #17203E;
-    border-radius: 10px;
-    border-color: #DBC4FF;
 }
 
 .div_componente {
