--- a/Site/public/dash-estatica/nav.css
+++ b/Site/public/dash-estatica/nav.css
@@ -193,7 +193,7 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 
 .dash {
     top: 0;
-    left: 25%;
+    left: 10%;
     background-color: #17203E;
     height: 80vh; 
     display: flex;
@@ -204,6 +204,7 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
 .regua {
     position: relative;
     bottom: 10vh;
+    right: 15vw;
 
     display: flex;
     text-align: center;
@@ -247,7 +248,7 @@ input[type=checkbox]:checked ~ .sidebarIconToggle > .diagonal.part-2 {
     flex-direction: column;
     background-color: #17203E;
     
-    width: 50%;
+    width: 40%;
     height: 100%;
     /* margin-top: 20px; */
     /* margin-left: 40px; */
@@ -513,9 +514,10 @@ li a {
 
 .div_maquinas {
     position: relative;
-    right: 10vw;
+    bottom: 5vh;
+    right: 9vw;
 
-    width: 10vw;
+    width: 9vw;
     height: 22vh;
 
    
@@ -588,11 +590,14 @@ li a {
 
 
 .inf_dash {
+    position: relative;
+    right: 15vw;
     
     display: flex;
     align-items: center;
     justify-content: space-around;
-    width: 100%;
+    width: 100vw;
+    
 }
 
 
@@ -604,7 +609,7 @@ li a {
 }
 
 .sel_componentescss {
-    width: 27vw;
+    width: 10vw;
     height: 6vh;
     background-color: #17203E;
     border-color: #DBC4FF;
@@ -612,7 +617,7 @@ li a {
     border-radius: 5px 20px 5px 20px;
 
     margin-bottom: 22%;
-    padding: 5px;
+    
 }
 
 .div_componente {
@@ -628,8 +633,21 @@ li a {
     border: solid 3px whitesmoke;
     background-color: #17203E;
     border-radius: 10px;
-    width: 25%;
+    width: 30%;
     height: 80%;
     margin-top: 15vh;
     margin-bottom: 116px;
+}
+.btn_atualizar_grafico
+{
+    position: relative;
+    right: 18vw;
+    top: 6vh;
+
+    width: 10vw;
+    height: 6vh;
+    background-color: #17203E;
+    border-color: #DBC4FF;
+    color: whitesmoke;
+    border-radius: 5px 20px 5px 20px;
 }
