--- a/Site/public/dash-estatica/dash-cadastro.css
+++ b/Site/public/dash-estatica/dash-cadastro.css
@@ -223,7 +223,7 @@ height: 53px;
 background-color: var(--main-color-dark);
 border-radius: 10px;
 position: absolute;
-top: 11rem;
+top: 7.3rem;
 left: 0;
 transition: top 0.3s;
 }
@@ -285,7 +285,7 @@ margin: 0 0.4rem;
 }
 
 .admin-info {
-padding-left: 0.3rem;
+  padding-right: 0.6rem;
 }
 
 .admin-info h3 {
