editando tamanho da fonte

--- a/Site/public/dash-estatica/nav.css
+++ b/Site/public/dash-estatica/nav.css
@@ -913,7 +913,7 @@ bottom: 11rem;
     text-align: center;
 
     color: #E6005A;
-    font-size: 1.5vw;
+    font-size: 12px;
     font-weight: bolder;
 
     border: solid 3px whitesmoke;
